--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "tpl-ts-lib",
+  "name": "thingies",
   "version": "0.0.0",
   "description": "",
   "author": {
     "name": "streamich",
     "url": "https://github.com/streamich"
   },
-  "homepage": "https://github.com/streamich/tpl-ts-lib",
-  "repository": "streamich/tpl-ts-lib",
+  "homepage": "https://github.com/streamich/thingies",
+  "repository": "streamich/thingies",
   "license": "Unlicense",
   "engines": {
     "node": ">=10.18"
@@ -17,7 +17,7 @@
   "files": [
     "lib/",
     "es6/",
-    "esm/"
+    "es2020/"
   ],
   "types": "lib/index.d.ts",
   "typings": "lib/index.d.ts",
@@ -29,32 +29,32 @@
     "clean": "rimraf lib es6 esm",
     "build:cjs": "tsc",
     "build:es6": "tsc --module commonjs --target es6 --outDir es6",
-    "build:esm": "tsc --module ESNext --target ESNEXT --outDir esm",
-    "build": "yarn build:cjs && yarn build:es6 && yarn build:esm",
+    "build:es2020": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir es2020",
+    "build": "yarn build:cjs && yarn build:es6 && yarn build:es2020",
     "test": "jest --no-cache --config='jest.config.js'",
     "release": "semantic-release"
   },
   "keywords": [],
   "dependencies": {},
   "peerDependencies": {
-    "tslib": "2"
+    "tslib": "^2"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/npm": "^7.0.6",
-    "@types/jest": "^26.0.14",
-    "husky": "^4.3.0",
-    "jest": "^26.4.2",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/npm": "^8.0.2",
+    "@types/jest": "^27.0.2",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.1.2",
-    "ts-jest": "^26.4.1",
+    "semantic-release": "^18.0.0",
+    "ts-jest": "^27.0.7",
     "tslint": "^6.1.3",
     "tslint-config-common": "^1.6.0",
-    "typescript": "^4.0.3",
-    "tslib": "^2.0.1"
+    "typescript": "^4.4.4",
+    "tslib": "^2.3.1"
   },
   "release": {
     "verifyConditions": [
