chore: 🤖 set "main" branch as release branch

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
       "@semantic-release/changelog",
       "@semantic-release/npm",
       "@semantic-release/git"
-    ]
+    ],
+    "branches": ["main"]
   }
 }
