--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "prettier:diff": "prettier -l 'src/**/*.{ts,tsx,js,jsx}'",
     "tslint": "tslint 'src/**/*.{js,jsx,ts,tsx}' -t verbose",
     "lint": "yarn tslint",
-    "clean": "rimraf lib es6 es2020",
+    "clean": "rimraf lib es6 es2020 coverage typedocs gh-pages",
     "build:cjs": "tsc",
     "build:es6": "tsc --module commonjs --target es6 --outDir es6",
     "build:es2020": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir es2020",
     "build": "yarn build:cjs && yarn build:es6 && yarn build:es2020",
     "test": "jest --no-cache --config='jest.config.js'",
+    "coverage": "yarn test --collectCoverage",
+    "typedoc": "npx typedoc@0.25.13 --tsconfig tsconfig.build.json",
+    "build:pages": "npx rimraf@5.0.5 gh-pages && mkdir -p gh-pages && cp -r typedocs/* gh-pages && cp -r coverage gh-pages/coverage",
+    "deploy:pages": "gh-pages -d gh-pages",
     "release": "semantic-release"
   },
   "keywords": [],
