--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,8 +1,8 @@
-name: Node.js CI
+name: GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   gh-pages:
@@ -18,9 +18,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn install --frozen-lockfile
-      - run: npx typedoc
+      - run: yarn typedoc
+      - run: yarn coverage
+      - run: yarn build:pages
       - name: Publish to gh-pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./typedocs
+          publish_dir: ./gh-pages
