--- a/package.json
+++ b/package.json
@@ -42,17 +42,19 @@
     "tslib": "^2"
   },
   "devDependencies": {
+    "@types/benchmark": "^2.1.5",
     "@types/jest": "^29.5.12",
+    "benchmark": "^2.1.4",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "pretty-quick": "^3.1.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.2",
+    "tslib": "^2.6.2",
     "tslint": "^6.1.3",
     "tslint-config-common": "^1.6.2",
-    "typescript": "^5.0.3",
-    "tslib": "^2.6.2"
+    "typescript": "^5.0.3"
   },
   "release": {
     "branches": [
